plugins {
    id "java"
    id "idea"
    id "maven-publish"
}

group = "com.rakovets.course"
version = "1.1"

java {
    withSourcesJar()
}

dependencies {
    implementation 'com.github.spotbugs:spotbugs-annotations:4.6.0'
    testImplementation('org.junit.jupiter:junit-jupiter:5.8.2')
}

repositories {
    mavenCentral()
    jcenter()
}

compileJava {
    options.release.set(11)
    options.encoding("UTF-8")
}

compileTestJava {
    options.release.set(11)
    options.encoding("UTF-8")
}

test {
    useJUnitPlatform()
    systemProperty("file.encoding", "UTF-8")
}

publishing {
    repositories {
        maven {
            name = "GitHubPackages"
            url = uri("https://maven.pkg.github.com/rakovets/course-java-core")
            credentials {
                username = System.getenv("GITHUB_ACTOR")
                password = System.getenv("GITHUB_TOKEN")
            }
        }
    }
}
